improve message population & collect attachments